# OpenRaceRender

./: .gitignore  CMakeLists.txt  README.md  render_to_frame.py
.github/workflows/: ccpp.yml  linux.yml  macos.yml  windows.yml
cmake/: FindFFMPEG.cmake
py/: render_to_frame.py
raw/: record_2sec.csv
src/: basictypes.h  debugrender.cpp  debugrender.h  logreader.cpp  logreader.h  logrender.cpp  logrender.h  main.cpp  test.cpp  videodecoder.cpp  videodecoder.h  videoplayer.cpp  videoplayer.h  videoplayermpv.cpp  videoplayermpv.h  widget.cpp  widget.h
src/test/: testmpv.cpp  testvideoplayer.cpp  videoplayermpv.h
src/widgets/: accelerationwidget.cpp  accelerationwidget.h  dashboardwidget.cpp  dashboardwidget.h  mapwidget.cpp  mapwidget.h
